[gd_scene load_steps=4 format=3 uid="uid://ctx5gghrlm2e2"]

[ext_resource type="Texture2D" uid="uid://cwreuayubwn8t" path="res://assets/sprites/sprites/BUTTONS/i.png" id="1_1t52y"]
[ext_resource type="Script" uid="uid://b1274xir2hei0" path="res://script/info.gd" id="1_kin2u"]
[ext_resource type="Texture2D" uid="uid://b875kmoijeu1h" path="res://assets/sprites/sprites/BUTTONS/i hover.png" id="2_kin2u"]

[node name="info" type="CanvasLayer"]
script = ExtResource("1_kin2u")

[node name="i" type="TextureButton" parent="."]
offset_left = 1005.0
offset_top = 32.0
offset_right = 1022.0
offset_bottom = 52.0
scale = Vector2(5, 5)
texture_normal = ExtResource("1_1t52y")
texture_hover = ExtResource("2_kin2u")

[connection signal="mouse_entered" from="i" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="i" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="i" to="." method="_on_texture_button_pressed"]
